--- a/k8s/apps/observability/unpoller/app/helmrelease.yaml
+++ b/k8s/apps/observability/unpoller/app/helmrelease.yaml
@@ -36,16 +36,16 @@ spec:
               TZ: Australia/Sydney
               UP_UNIFI_DEFAULT_ROLE: unpoller
               UP_UNIFI_DEFAULT_URL: https://192.168.1.1
-              UP_PROMETHEUS_HTTP_LISTEN: 0.0.0.0:80
+              UP_UNIFI_DEFAULT_VERIFY_SSL: false
               UP_INFLUXDB_DISABLE: true
             envFrom:
               - secretRef:
                   name: unpoller-secret
-            # probes:
-            #   liveness:
-            #     enabled: true
-            #   readiness:
-            #     enabled: true
+            probes:
+              liveness:
+                enabled: true
+              readiness:
+                enabled: true
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
