--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -35,6 +35,193 @@ spec:
       enabled: true
     resources:
       requests:
-        memory: 128Mi
-        cpu: 50m
+        # memory: 128Mi
+        memory: 10Mi
+        # cpu: 50m
+        cpu: 10m
       limits: {}
+    # NOTE: reduce limits for everything when using just one node
+    csiRBDProvisionerResource: |
+      - name : csi-provisioner
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 256Mi
+      - name : csi-resizer
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 256Mi
+      - name : csi-attacher
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 256Mi
+      - name : csi-snapshotter
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 256Mi
+      - name : csi-rbdplugin
+        resource:
+          requests:
+            cpu: 10m
+            memory: 10Mi
+          limits:
+            memory: 1Gi
+      - name : csi-omap-generator
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 1Gi
+      - name : liveness-prometheus
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+    # -- CEPH CSI RBD plugin resource requirement list
+    # @default -- see values.yaml
+    csiRBDPluginResource: |
+      - name : driver-registrar
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+      - name : csi-rbdplugin
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 1Gi
+      - name : liveness-prometheus
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+    # -- CEPH CSI CephFS provisioner resource requirement list
+    # @default -- see values.yaml
+    csiCephFSProvisionerResource: |
+      - name : csi-provisioner
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+      - name : csi-resizer
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+      - name : csi-attacher
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+      - name : csi-snapshotter
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+      - name : csi-cephfsplugin
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 1Gi
+      - name : liveness-prometheus
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+    # -- CEPH CSI CephFS plugin resource requirement list
+    # @default -- see values.yaml
+    csiCephFSPluginResource: |
+      - name : driver-registrar
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+      - name : csi-cephfsplugin
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 1Gi
+      - name : liveness-prometheus
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+    # -- CEPH CSI NFS provisioner resource requirement list
+    # @default -- see values.yaml
+    csiNFSProvisionerResource: |
+      - name : csi-provisioner
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+      - name : csi-nfsplugin
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 1Gi
+      - name : csi-attacher
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 1Gi
+    # -- CEPH CSI NFS plugin resource requirement list
+    # @default -- see values.yaml
+    csiNFSPluginResource: |
+      - name : driver-registrar
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 10m
+          limits:
+            memory: 256Mi
+      - name : csi-nfsplugin
+        resource:
+          requests:
+            memory: 10Mi
+            cpu: 50m
+          limits:
+            memory: 1Gi
