--- a/k8s/bootstrap/helmfile.yaml
+++ b/k8s/bootstrap/helmfile.yaml
@@ -46,6 +46,7 @@ releases:
     values:
       - ./templates/wipe-rook.yaml.gotmpl
     needs:
+      - kube-system/coredns
       - kube-system/spegel
   - name: flux-operator
     namespace: flux-system
