feat(tailscale): set static tailnet IPs

--- a/k8s/apps/network/tailscale/app/helmrelease.yaml
+++ b/k8s/apps/network/tailscale/app/helmrelease.yaml
@@ -24,6 +24,8 @@ spec:
   values:
     operatorConfig:
       hostname: "tailscale-operator"
+      podAnnotations:
+        tailscale.com/tailnet-ip: 100.100.42.100
     apiServerProxyConfig:
       mode: "true"
     proxyClass:
