--- a/k8s/apps/network/blocky/app/helmrelease.yaml
+++ b/k8s/apps/network/blocky/app/helmrelease.yaml
@@ -70,6 +70,7 @@ spec:
         annotations:
           lbipam.cilium.io/ips: "192.168.1.101"
           tailscale.com/expose: "true"
+          tailscale.com/tailnet-ip: 100.100.42.101
           tailscale.com/tags: "tag:dns"
         ports:
           dns:
