--- a/k8s/flux/cluster/ks.yaml
+++ b/k8s/flux/cluster/ks.yaml
@@ -1,3 +1,23 @@
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-meta
+  namespace: flux-system
+spec:
+  interval: 30m
+  path: ./k8s/flux/meta
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -5,17 +25,22 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
+  dependsOn:
+    - name: cluster-meta
   path: ./k8s/apps
   prune: true
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   decryption:
     provider: sops
     secretRef:
       name: sops-age
   postBuild:
     substituteFrom:
+      - name: cluster-settings
+        kind: ConfigMap
+        optional: true
       - name: cluster-secrets
         kind: Secret
         optional: true
@@ -32,8 +57,11 @@ spec:
               name: sops-age
           postBuild:
             substituteFrom:
-              - kind: Secret
-                name: cluster-secrets
+              - name: cluster-settings
+                kind: ConfigMap
+                optional: true
+              - name: cluster-secrets
+                kind: Secret
                 optional: true
       target:
         group: kustomize.toolkit.fluxcd.io
