--- a/k8s/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/k8s/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -14,7 +14,7 @@ instance:
     name: homelab
     url: ssh://git@github.com/solanyn/homelab
     ref: refs/heads/main
-    path: k8s/flux/config
+    path: k8s/flux/meta/config
     pullSecret: github-deploy-key
   commonMetadata:
     labels:
