--- a/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
@@ -15,7 +15,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   wait: false
   interval: 30m
   timeout: 15m
@@ -35,7 +35,7 @@ spec:
   prune: false # never should be deleted
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   wait: false
   interval: 30m
   timeout: 5m
