--- a/kubernetes/flux/meta/config/cluster.yaml
+++ b/kubernetes/flux/meta/config/cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: homelab
+  name: flux-system
   namespace: flux-system
 spec:
   interval: 30m
@@ -28,7 +28,7 @@ spec:
   wait: false
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   decryption:
     provider: sops
     secretRef:
