--- a/kubernetes/apps/network/nginx/ks.yaml
+++ b/kubernetes/apps/network/nginx/ks.yaml
@@ -15,7 +15,7 @@ spec:
   prune: false
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   wait: true
   interval: 30m
   timeout: 5m
@@ -36,7 +36,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   wait: false
   interval: 30m
   timeout: 5m
@@ -57,7 +57,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   wait: false
   interval: 30m
   timeout: 5m
