--- a/kubernetes/apps/network/tailscale/ks.yaml
+++ b/kubernetes/apps/network/tailscale/ks.yaml
@@ -15,7 +15,7 @@ spec:
   prune: false
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   wait: true
   interval: 30m
   timeout: 5m
@@ -37,7 +37,7 @@ spec:
   prune: false
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   wait: true
   interval: 30m
   timeout: 5m
