--- a/kubernetes/apps/observability/speedtest-exporter/ks.yaml
+++ b/kubernetes/apps/observability/speedtest-exporter/ks.yaml
@@ -12,7 +12,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: homelab
+    name: flux-system
   wait: true
   interval: 30m
   timeout: 5m
