--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -3,8 +3,8 @@ version: '3'
 set: [pipefail]
 shopt: [globstar]
 vars:
-  CLUSTER: 'homelab'
   CLUSTER_DIR: '{{.ROOT_DIR}}/kubernetes'
+  BOOTSTRAP_DIR: '{{.CLUSTER_DIR}}/bootstrap'
 env:
   KUBECONFIG: '{{.CLUSTER_DIR}}/kubeconfig'
   MINIJINJA_CONFIG_FILE: '{{.ROOT_DIR}}/.minijinja.toml'
@@ -13,6 +13,7 @@ env:
 includes:
   b: .taskfiles/bootstrap
   k: .taskfiles/kubernetes
+  s: ./taskfiles/sops
   t: .taskfiles/talos
   v: .taskfiles/volsync
   w: .taskfiles/workstation
