--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -20,7 +20,7 @@ releases:
     chart: cilium/cilium
     version: 1.16.5
     values:
-      - ../apps/kube-system/cilium/app/helm-values.yaml
+      - ../../apps/kube-system/cilium/app/helm-values.yaml
     needs:
       - observability/kube-prometheus-stack-crds
   - name: coredns
@@ -28,7 +28,7 @@ releases:
     chart: coredns/coredns
     version: 1.37.0
     values:
-      - ../apps/kube-system/coredns/app/helm-values.yaml
+      - ../../apps/kube-system/coredns/app/helm-values.yaml
     needs:
       - kube-system/cilium
   - name: spegel
@@ -36,7 +36,7 @@ releases:
     chart: oci://ghcr.io/spegel-org/helm-charts/spegel
     version: v0.0.29
     values:
-      - ../apps/kube-system/spegel/app/helm-values.yaml
+      - ../../apps/kube-system/spegel/app/helm-values.yaml
     needs:
       - kube-system/coredns
   - name: wipe-rook
@@ -52,7 +52,7 @@ releases:
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
     values:
-      - ../apps/flux-system/flux-operator/app/helm-values.yaml
+      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
     needs:
       - kube-system/wipe-rook
   - name: flux-instance
@@ -61,6 +61,6 @@ releases:
     version: 0.13.0
     wait: false
     values:
-      - ../apps/flux-system/flux-operator/instance/helm-values.yaml
+      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
     needs:
       - flux-system/flux-operator
