--- a/kubernetes/apps/network/external-dns/unifi/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/unifi/helmrelease.yaml
@@ -38,13 +38,11 @@ spec:
               secretKeyRef:
                 name: &secret external-dns-unifi-secret
                 key: EXTERNAL_DNS_UNIFI_USER
-          - name: UNIFI_PASS
+          - name: UNIFI_API_KEY
             valueFrom:
               secretKeyRef:
-                name: *secret
-                key: EXTERNAL_DNS_UNIFI_PASS
-                # - name: LOG_LEVEL
-                #   value: "debug"
+                name: &secret external-dns-unifi-secret
+                key: UNIFI_API_KEY
         livenessProbe:
           httpGet:
             path: /healthz
