fix: vault name

--- a/kubernetes/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
@@ -8,7 +8,7 @@ spec:
     onepassword:
       connectHost: http://onepassword-connect.external-secrets.svc.cluster.local
       vaults:
-        homelab: 1
+        kubernetes: 1
       auth:
         secretRef:
           connectTokenSecretRef:
