--- a/kubernetes/apps/default/kopia/app/externalsecret.yaml
+++ b/kubernetes/apps/default/kopia/app/externalsecret.yaml
@@ -37,8 +37,8 @@ spec:
             "storage": {
               "type": "s3",
               "config": {
-                "bucket": "solanyn-nas-backups",
-                "endpoint": "s3.us-east-005.backblazeb2.com",
+                "bucket": "nas",
+                "endpoint": "https://25450dc0f239d4e727e3488cfb31b5c4.r2.cloudflarestorage.com",
                 "accessKeyID": "{{ .AWS_ACCESS_KEY_ID }}",
                 "secretAccessKey": "{{ .AWS_SECRET_ACCESS_KEY }}"
               }
@@ -57,4 +57,4 @@ spec:
           }
   dataFrom:
     - extract:
-        key: backblaze
+        key: cloudflare
