--- a/kubernetes/templates/volsync/r2.yaml
+++ b/kubernetes/templates/volsync/r2.yaml
@@ -2,13 +2,13 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: "${APP}-volsync-b2"
+  name: "${APP}-volsync-r2"
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: "${APP}-volsync-b2-secret"
+    name: "${APP}-volsync-r2-secret"
     template:
       engineVersion: v2
       data:
@@ -18,15 +18,15 @@ spec:
         AWS_SECRET_ACCESS_KEY: "{{ .AWS_SECRET_ACCESS_KEY }}"
   dataFrom:
     - extract:
-        key: backblaze
+        key: cloudflare
     - extract:
-        key: volsync
+        key: volsync-r2-template
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/volsync.backube/replicationsource_v1alpha1.json
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationSource
 metadata:
-  name: "${APP}-b2"
+  name: "${APP}-r2"
 spec:
   sourcePVC: "${APP}"
   trigger:
@@ -34,9 +34,9 @@ spec:
   restic:
     copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
     pruneIntervalDays: 14
-    repository: "${APP}-volsync-b2-secret"
+    repository: "${APP}-volsync-r2-secret"
     volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-csi-ceph-blockpool}"
-    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-10Gi}"
+    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-2Gi}"
     cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}"
     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
     storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
