--- a/kubernetes/apps/default/kopia/app/externalsecret.yaml
+++ b/kubernetes/apps/default/kopia/app/externalsecret.yaml
@@ -39,7 +39,7 @@ spec:
               "config": {
                 "bucket": "nas",
                 "endpoint": "https://25450dc0f239d4e727e3488cfb31b5c4.r2.cloudflarestorage.com",
-                "accessKeyID": "{{ .AWS_ACCESS_KEY_ID }}",
+                "accessKeyID": "{{ .AWS_SECRET_ACCESS_KEY }}",
                 "secretAccessKey": "{{ .AWS_SECRET_ACCESS_KEY }}"
               }
             },
