--- a/kubernetes/apps/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
@@ -29,18 +29,10 @@ spec:
     - name: openebs
       namespace: openebs-system
   valuesFrom:
-    - targetPath: githubConfigSecret.github_app_id
+    - targetPath: githubConfigSecret.github_token
       kind: Secret
       name: actions-runner-controller-auth-secret
-      valuesKey: ACTION_RUNNER_CONTROLLER_GITHUB_APP_ID
-    - targetPath: githubConfigSecret.github_app_installation_id
-      kind: Secret
-      name: actions-runner-controller-auth-secret
-      valuesKey: ACTION_RUNNER_CONTROLLER_GITHUB_INSTALLATION_ID
-    - targetPath: githubConfigSecret.github_app_private_key
-      kind: Secret
-      name: actions-runner-controller-auth-secret
-      valuesKey: ACTION_RUNNER_CONTROLLER_GITHUB_PRIVATE_KEY
+      valuesKey: ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN
   values:
     nameOverride: gha-runner-scale-set
     runnerScaleSetName: gha-runner-scale-set
