--- a/kubernetes/apps/ml-platform/kustomization.yaml
+++ b/kubernetes/apps/ml-platform/kustomization.yaml
@@ -3,3 +3,12 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   # - ./minio/ks.yaml
+  - ../../templates/flux
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: ml-platform
+    unsetOnly: true
