--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
+  - ../../templates/flux
   - ./cloudflared/ks.yaml
   - ./tailscale/ks.yaml
   - ./oauth2-proxy/ks.yaml
@@ -9,3 +10,11 @@ resources:
   - ./external-dns/ks.yaml
   - ./nginx/ks.yaml
   - ./echo-server/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: network
+    unsetOnly: true
