--- a/kubernetes/apps/openebs-system/kustomization.yaml
+++ b/kubernetes/apps/openebs-system/kustomization.yaml
@@ -2,4 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
+  - ../../templates/flux
   - ./openebs/ks.yaml
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: not-used
+      namespace: openebs-system
+    unsetOnly: true
