--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -5,13 +5,14 @@ metadata:
   name: cluster-meta
   namespace: flux-system
 spec:
-  interval: 30m
+  targetNamespace: flux-system
   path: ./kubernetes/flux/meta
   prune: true
-  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+  wait: true
+  interval: 30m
   decryption:
     provider: sops
     secretRef:
@@ -24,7 +25,6 @@ metadata:
   name: cluster-apps
   namespace: flux-system
 spec:
-  interval: 30m
   dependsOn:
     - name: cluster-meta
   path: ./kubernetes/apps
@@ -32,6 +32,8 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  wait: false
+  interval: 30m
   decryption:
     provider: sops
     secretRef:
