--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -19,5 +19,5 @@ transformers:
     kind: NamespaceTransformer
     metadata:
       name: not-used
-      namespace: network
+      namespace: observability
     unsetOnly: true
