--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -12,7 +12,7 @@
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prEditedNotification"],
   "rebaseWhen": "conflicted",
-  "automergeSchedule": ["after 5pm"],
+  "automergeSchedule": ["after 12am"],
   "timezone": "Australia/Sydney",
   "schedule": ["after 12am"],
   "ignorePaths": ["**/*.sops.*"],
