fix(kopia): secret typo

--- a/kubernetes/apps/default/kopia/app/externalsecret.yaml
+++ b/kubernetes/apps/default/kopia/app/externalsecret.yaml
@@ -39,7 +39,7 @@ spec:
               "config": {
                 "bucket": "nas",
                 "endpoint": "{{ .CLOUDFLARE_ACCOUNT_TAG }}.r2.cloudflarestorage.com",
-                "accessKeyID": "{{ .AWS_SECRET_ACCESS_ID }}",
+                "accessKeyID": "{{ .AWS_SECRET_ACCESS_KEY_ID }}",
                 "secretAccessKey": "{{ .AWS_SECRET_ACCESS_KEY }}"
               }
             },
