fix(recyclarr): omit repositories from backup

--- a/kubernetes/apps/default/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/recyclarr/app/helmrelease.yaml
@@ -80,3 +80,7 @@ spec:
         sizeLimit: 100Mi
         globalMounts:
           - path: /config/logs
+      config-repositories:
+        type: emptyDir
+        globalMounts:
+          - path: /config/repositories
