--- a/kubernetes/apps/default/oauth2-proxy/ks.yaml
+++ b/kubernetes/apps/default/oauth2-proxy/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app zipline
+  name: &app oauth2-proxy
   namespace: flux-system
 spec:
   targetNamespace: default
@@ -10,16 +10,14 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: cloudnative-pg-cluster
-    - name: external-secrets-stores
-  path: ./kubernetes/apps/default/zipline/app
+    - name: pocket-id
+  path: ./kubernetes/apps/default/oauth2-proxy/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
   wait: false
   interval: 30m
-  timeout: 5m
   postBuild:
     substitute:
       APP: *app
