--- a/kubernetes/apps/network/external/ks.yaml
+++ b/kubernetes/apps/network/external/ks.yaml
@@ -2,14 +2,39 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app cert-manager
+  name: &app external-cloudflared
   namespace: flux-system
 spec:
-  targetNamespace: cert-manager
+  targetNamespace: network
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./kubernetes/apps/cert-manager/cert-manager/app
+  dependsOn:
+    - name: external-external-dns
+    - name: external-secrets-stores
+  path: ./kubernetes/apps/network/external/cloudflared
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  wait: false
+  interval: 30m
+  timeout: 5m
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app external-external-dns
+  namespace: flux-system
+spec:
+  targetNamespace: network
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  dependsOn:
+    - name: external-secrets-stores
+  path: ./kubernetes/apps/network/external/external-dns
   prune: true
   sourceRef:
     kind: GitRepository
@@ -22,44 +47,20 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app cert-manager-issuers
+  name: &app external-ingress-nginx
   namespace: flux-system
 spec:
-  targetNamespace: cert-manager
+  targetNamespace: network
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: cert-manager
-    - name: external-secrets-stores
-  path: ./kubernetes/apps/cert-manager/cert-manager/issuers
+    - name: cert-manager-tls
+  path: ./kubernetes/apps/network/external/ingress-nginx
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: true
-  interval: 30m
-  timeout: 5m
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: &app cert-manager-tls
-  namespace: flux-system
-spec:
-  targetNamespace: cert-manager
-  commonMetadata:
-    labels:
-      app.kubernetes.io/name: *app
-  dependsOn:
-    - name: cert-manager-issuers
-    - name: external-secrets-stores
-  path: ./kubernetes/apps/cert-manager/cert-manager/tls
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  wait: true
+  wait: false
   interval: 30m
   timeout: 5m
