--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -1,15 +1,13 @@
+# yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # Pre Flux-Kustomizations
   - ./namespace.yaml
-  - ../../templates/flux
-  - ./cloudflared/ks.yaml
-  - ./tailscale/ks.yaml
-  - ./oauth2-proxy/ks.yaml
-  - ./blocky/ks.yaml
-  - ./external-dns/ks.yaml
-  - ./nginx/ks.yaml
-  - ./echo-server/ks.yaml
+  - ../../templates/alerts
+  # Flux-Kustomizations
+  - ./external/ks.yaml
+  - ./internal/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
