feat: rename flux template to alerts

--- a/kubernetes/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/apps/actions-runner-system/kustomization.yaml
@@ -1,7 +1,7 @@
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
-  - ../../templates/flux
+  - ../../templates/alerts
   # Flux-Kustomizations
   - ./gha-runner-scale-set-controller/ks.yaml
   - ./gha-runner-scale-set/ks.yaml
