--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
-  - ../../templates/flux
+  - ../../templates/alerts
   # Flux-Kustomizations
   - ./cilium/ks.yaml
   - ./coredns/ks.yaml
