fix(volsync): nfs mount path

--- a/kubernetes/apps/volsync-system/volsync/app/mutations/volsync-mover-nfs.yaml
+++ b/kubernetes/apps/volsync-system/volsync/app/mutations/volsync-mover-nfs.yaml
@@ -47,7 +47,7 @@ spec:
                 name: "repository",
                 nfs: Object.spec.template.spec.volumes.nfs{
                   server: "nas.internal",
-                  path: "/mnt/eros/Volsync"
+                  path: "/mnt/world/backups"
                 }
               }
             }
