fix(zipline): don't need pvc for now maybe

--- a/kubernetes/apps/default/zipline/app/helmrelease.yaml
+++ b/kubernetes/apps/default/zipline/app/helmrelease.yaml
@@ -101,8 +101,8 @@ spec:
                   identifier: app
                   port: http
     persistence:
-      config:
-        existingClaim: zipline
+      # config:
+      #   existingClaim: zipline
       tmp:
         type: emptyDir
         sizeLimit: 1Gi
