fix(external-secret): cloudflare access key id variable name

--- a/kubernetes/apps/default/kopia/app/externalsecret.yaml
+++ b/kubernetes/apps/default/kopia/app/externalsecret.yaml
@@ -37,7 +37,7 @@ spec:
               "config": {
                 "bucket": "nas",
                 "endpoint": "{{ .CLOUDFLARE_ACCOUNT_TAG }}.r2.cloudflarestorage.com",
-                "accessKeyID": "{{ .AWS_SECRET_ACCESS_KEY_ID }}",
+                "accessKeyID": "{{ .AWS_ACCESS_KEY_ID }}",
                 "secretAccessKey": "{{ .AWS_SECRET_ACCESS_KEY }}"
               }
             },
