refactor: onepassword secret store

--- a/kubernetes/apps/cert-manager/cert-manager/tls/pushsecret.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/tls/pushsecret.yaml
@@ -5,7 +5,7 @@ metadata:
   name: goyangi-cloud-tls
 spec:
   secretStoreRefs:
-    - name: onepassword-connect
+    - name: onepassword
       kind: ClusterSecretStore
   selector:
     secret:
