--- a/kubernetes/apps/default/kopia/app/externalsecret.yaml
+++ b/kubernetes/apps/default/kopia/app/externalsecret.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword-connect
+    name: onepassword
   target:
     name: kopia-secret
     template:
@@ -25,7 +25,7 @@ spec:
   refreshInterval: 5m
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword-connect
+    name: onepassword
   target:
     name: kopia-repository-secret
     template:
