--- a/kubernetes/apps/default/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/default/oauth2-proxy/app/externalsecret.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword-connect
+    name: onepassword
   target:
     name: oauth2-proxy-secret
     template:
