--- a/kubernetes/apps/default/plex/ks.yaml
+++ b/kubernetes/apps/default/plex/ks.yaml
@@ -10,7 +10,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: external-secrets-stores
+    - name: onepassword-store
   path: ./kubernetes/apps/default/plex/app
   prune: true
   sourceRef:
@@ -40,7 +40,7 @@ spec:
       app.kubernetes.io/name: *app
   targetNamespace: default
   dependsOn:
-    - name: external-secrets-stores
+    - name: onepassword-store
   path: ./kubernetes/apps/default/plex/tools
   prune: true
   sourceRef:
