--- a/kubernetes/apps/default/readarr-ab/ks.yaml
+++ b/kubernetes/apps/default/readarr-ab/ks.yaml
@@ -9,7 +9,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: external-secrets-stores
+    - name: onepassword-store
   path: ./kubernetes/apps/default/readarr-ab/app
   prune: true
   sourceRef:
