--- a/kubernetes/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/apps/external-secrets/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ../../templates/alerts
   # Flux-Kustomizations
   - ./external-secrets/ks.yaml
-  - ./onepassword-connect/ks.yaml
+  - ./onepassword/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
