--- a/kubernetes/apps/observability/gatus/ks.yaml
+++ b/kubernetes/apps/observability/gatus/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cloudnative-pg-cluster
-    - name: external-secrets-stores
+    - name: onepassword-store
   path: ./kubernetes/apps/observability/gatus/app
   prune: true
   sourceRef:
