--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -10,6 +10,8 @@ repositories:
     url: https://helm.cilium.io
   - name: coredns
     url: https://coredns.github.io/helm
+  - name: external-secrets
+    url: https://charts.external-secrets.io
 releases:
   - name: kube-prometheus-stack-crds
     namespace: observability
@@ -39,6 +41,14 @@ releases:
       - ../../apps/kube-system/spegel/app/helm-values.yaml
     needs:
       - kube-system/coredns
+  - name: external-secrets
+    namespace: external-secrets
+    chart: external-secrets/external-secrets
+    version: 0.12.1
+    values:
+      - ../apps/external-secrets/external-secrets/app/helm-values.yaml
+    needs:
+      - kube-system/coredns
   - name: wipe-rook
     namespace: kube-system
     chart: oci://ghcr.io/bjw-s/helm/app-template
@@ -46,7 +56,7 @@ releases:
     values:
       - ./templates/wipe-rook.yaml.gotmpl
     needs:
-      - kube-system/spegel
+      - kube-system/coredns
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
