chore: rename persistent fields

--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -106,12 +106,12 @@ spec:
         existingClaim: home-assistant
         globalMounts:
           - path: /config
-      logs:
+      config-logs:
         type: emptyDir
         sizeLimit: 100Mi
         globalMounts:
           - path: /config/logs
-      tts:
+      config-tts:
         type: emptyDir
         sizeLimit: 1Gi
         globalMounts:
