--- a/kubernetes/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/default/plex/app/helmrelease.yaml
@@ -111,11 +111,11 @@ spec:
         globalMounts:
           - path: /config/Library/Application Support/Plex Media Server
       # Separate PVC for cache to avoid backing up cache files
-      cache:
+      config-cache:
         existingClaim: plex-cache
         globalMounts:
           - path: /config/Library/Application Support/Plex Media Server/Cache
-      logs:
+      config-logs:
         type: emptyDir
         sizeLimit: 100Mi
         globalMounts:
