feat: external-secrets has OCI helm now

--- a/kubernetes/apps/default/kopia/app/externalsecret.yaml
+++ b/kubernetes/apps/default/kopia/app/externalsecret.yaml
@@ -22,7 +22,7 @@ kind: ExternalSecret
 metadata:
   name: kopia-repository
 spec:
-  refreshInterval: 5m
+  refreshinterval: 30m
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
