--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -4,7 +4,7 @@ kind: ExternalSecret
 metadata:
   name: cross-seed
 spec:
-  refreshInterval: 5m
+  refreshinterval: 30m
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
