feat(cross-seed): use client API

--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -32,26 +32,8 @@ spec:
             radarr: ["http://radarr.default.svc.cluster.local/?apikey={{ .RADARR_API_KEY }}"],
             skipRecheck: true,
             sonarr: ["http://sonarr.default.svc.cluster.local/?apikey={{ .SONARR_API_KEY }}"],
-            torrentDir: "/qbittorrent/qBittorrent/BT_backup",
-            torznab: [
-              1, // PrivateHD
-              2, // AvistaZ
-              3, // ExoticaZ
-              4, // MyAnonamouse
-              5, // HappyFappy
-              10, // AnimeZ
-              13, // Orpheus
-              14, // Hawke One
-              15, // DigitalCore
-              16, // Milkie
-              18, // TorrentLeech
-              19, // seedpool
-              20, // SportsCult
-              21, // LST
-              22, // Oldtoons
-              23, // CinemaZ
-              24, // iAnon
-            ].map(i => `http://prowlarr.default.svc.cluster.local/$${i}/api?apikey={{ .PROWLARR_API_KEY }}`),
+            torznab: [],
+            useClientTorrents: true
           };
   dataFrom:
     - extract:
