--- a/kubernetes/apps/default/cross-seed/app/kustomization.yaml
+++ b/kubernetes/apps/default/cross-seed/app/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
+  - ../../../../templates/volsync
 configMapGenerator:
   - name: cross-seed-loki-rules
     files:
